// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component calls the onPress function when pressed 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "height": 68,
      "justifyContent": "center",
      "marginHorizontal": 20,
      "padding": 3,
      "width": 320,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "borderRadius": 10,
        "flexDirection": "row",
        "height": "100%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
    testID="default-theme"
  >
    <Text
      style={
        {
          "color": "#fff",
          "fontSize": 16,
        }
      }
    >
      Click me
    </Text>
  </View>
</View>
`;

exports[`Button component renders correctly with default theme 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "height": 68,
      "justifyContent": "center",
      "marginHorizontal": 20,
      "padding": 3,
      "width": 320,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "borderRadius": 10,
        "flexDirection": "row",
        "height": "100%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
    testID="default-theme"
  >
    <Text
      style={
        {
          "color": "#fff",
          "fontSize": 16,
        }
      }
    >
      Click me
    </Text>
  </View>
</View>
`;

exports[`Button component renders correctly with primary theme 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "height": 68,
        "justifyContent": "center",
        "marginHorizontal": 20,
        "padding": 3,
        "width": 320,
      },
      {
        "borderColor": "#ffd33d",
        "borderRadius": 18,
        "borderWidth": 4,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "flexDirection": "row",
          "height": "100%",
          "justifyContent": "center",
          "width": "100%",
        },
        {
          "backgroundColor": "#fff",
        },
      ]
    }
    testID="primary-theme"
  >
    <Text />
    <Text
      style={
        [
          {
            "color": "#fff",
            "fontSize": 16,
          },
          {
            "color": "#25292e",
          },
        ]
      }
    >
      Click me
    </Text>
  </View>
</View>
`;
